# StockSimV2

./: CMakeLists.txt  CMakeUserPresets.json  Company.cpp  Company.h  Description.txt  Manager.cpp  Manager.h  config.json  curl_function (1).h  curl_function.cpp  curl_function.h  helloWorld.cpp  stock.cpp  stock.h  user.cpp  user.h
